--- a/site_docs/d0011.md
+++ b/site_docs/d0011.md
@@ -1,62 +1,88 @@
-| ## French Transcription | ## English Translation |
-| ----------------------- | ---------------------- |
-| Par devant le No^re | Sent before the |
-| Royal de la Province de la Louisiane resident a la Nouvelle Orleans | Royal Notary of the Louisiana Province Residing in New Orleans. |
-| presences des temoins souffignez fut present En sa personne M. Jean- | The undersigned witnesses present in person: |
-| Baptiste Raguet Conseilleur au Conseil Superieur demeurant a la | Mr. Jean-Baptiste Raguet, Advisor on the Superior Council residing in |
-| N^lle Orleans a lequel volontairement reconnu et confesse devoir a | New Orleans, to which he voluntarily recognizes and admits to owe to |
-| Monsieur de Salmon Cy devant Commissaire Ordonnateur a la | Mr. Salmon here before the Chief Civil Officer in |
-| Louisiane la Somme de huit mille Livres pour une famille des | Louisiana a sum of eight thousand livres for a family of |
-| Negres et Negresses dont le pere s'apelle (sic) dominique, Marianne | negros and negresses whose patriarch is called Dominique, Marianne |
-| sa femme, hypolite leur fille aimée, Louis agé de douze ans | his wife, Hypolite their beloved daughter, Louis twelve years old |
-| ou Environ, joseph agé de cinq ans, anne agée de quatre ans Et demy | or thereabout, Joseph five years old, Anne four years old, little |
-| francois a la mamelle Et Claude fils d'hypolite a la mamelle | François at the breast and Claude the son of Hypolite at the breast |
-| en faisant le nombre de huit tetes que Mond. Sieur de Salmon, luy | making a headcount of eight total. Mr. de Salmon has |
-| a presentement vendu et livré Exepte 'le nommé dominique | to date sold and delivered, except for the named Dominique, |
-| Cusinier Chef de le d't famille que mond' Sieur vendeur Salmon | head chef, all of the said family. The seller Salmon |
-| reserve d'emmener En france pour le servir dans le d’le du Roy | has reserved the right to bring him to France to serve at the residence of the King, |
-| qui doit incessamment sortir Et qu'il promet Et s'oblige de renvoyer | that he is leaving soon and promises and is obligated to send him [Dominique] |
-| a se de fais du Espagne par les premiers vaisseaus qui viendront | from Spain without cost on one of the first ships to come |
-| a la Louisiane d’ynon et au cas que le dit negre vint a mourir | to Louisiana if not and if the said negro is to die |
-| ou a Etre pris par les Ennemies de la france ou quil ne fut point | or to be taken by the enemies of France or that he is not |
-| En parfaite Sante avant dEtre remis a Monchsr. Raguet Monchsr. | in perfect health before being returned to Mr. Raguet Mr. |
-| de Salmon promet diminuer Sur la somme principalle de huit | Salmon promises to reduce the principal sum of eight |
-| mille Livres celle de deux mille cinq cent Livres a quoy a Eté | thousand livres the sum of two thousand five hundred livres which had been |
-| Estimé Et Evalué Entre luy et le ch Sr. acquereur le d.^t negre | estimated and evaluated between him and the esteemed sir to acquire the said Black man |
-| apellé dominique la quelle d.t somme de huit mille Livres. | called Dominique the said sum of eight thousand livres. |
-|  |  |
-|  |  |
-| Monchsr. Raguet S’oblige et Promet de la donner a payer au | Mr. Raguet is obliged and promises to pay said total to |
-| Monch.Sieur de Salmon ou au porteur de'a poreseule a En Espèces | Mr. de Salmon or the bearer of this [order] only in cash or by |
-| donnatuer ou lettres de change sur 9'ee les trésoriers généraux | promissory note contracted with the General Treasurers |
-| De la marine, les quelles lettres de change seront adressees | of the Navy, in which case the promissory note will be addressed |
-| Au S. Hersan Commissionnaire de Mons. De Salmon demeurant | to Mr. Hersan Commissioner of the [Paris] Mint. Mr. de Salmon living |
-| A la _oix defert Rue S^t Denis à Paris le dit payements a | at St. Denis Street in Paris, the said fixed payments |
-| Fixe en quatre années prochaines en consécutifs et payements | are to be made in the next four years as equal and consecutive payments |
-| Egaux données en année a commencer de ce jour C'est a dire | given annually starting this day, which is to say |
-| Deux mille Livres par Chaque année, aux conditions que | two thousand livres each year, under the conditions that |
-| Mond. S. Raguet ne pourra vendre ny Engager aucuns des d.^ts |  have been said. Mr. Raguet will not be able either to sell or to indenture any of the said | 
-| Negres negresses ou negrillons d'y devant vendu a qu'il ne l'a  | negros, negresses, and negro children before he has paid in full or be sued for |
-| arot entièrement payé poursuivant de quel paiement que la obligée | what payment is obligated |
-| d'une hypothèque tous ses Biens meubles Et immeubles Ete | by mortgage upon all of his movable and immovable property, |
-| Speciallement la d^t famille de negres et pour l'exécution des | especially the said family of negros, for the execution of |
-| Presentes Mond.  |  the present contract and any consequences arising thereof. |
-|  |  |
-|  |  |
-| S. Raguet a elu(?) son domicile a la N^lle Orleans | Mr. Raguet elected his domicile in New Orleans, |
-| En sa maison et demeure ordinaire au quel lieu il consent |  in his house and ordinary home in which place he consents |
-| Que tous ___ soient faites En vertu des presents car ainsy |  that all ___ in the virtue of those present because this way |
-| A Ete convenu et arrêtée Entre les parties, promettant et | |
-| renouvelant(?) a toutes choses a ce contrain fait et passée a | |
-| La Nouvelle orléans province de la louisiane le seize | In New Orleans, province of Louisiana, the sixteenth |
-| Décembre et etudes l'an mil sept quarante quatre | of December and ___ the yeah seventeen hundred forty-four |
-| Prefence des(?) S^t Augustin Chantalou et Jacques Contrelle | in the presence of __ Augustin Chantalou and Jacques Contrelle |
-| Temoins y demeurants Et ont signé ainsy signé Et(?) minute | |
-| Salmon, Raguet, Chatelou, Cantrelle Etnous No.^(?) soussigné. |   witnesses (and?) residing (?) and who signed |
+## French Transcription
+Par devant le No^re
+Royal de la Province de la Louisiane resident a la Nouvelle Orleans
+presences des temoins souffignez fut present En sa personne M. Jean-
+Baptiste Raguet Conseilleur au Conseil Superieur demeurant a la
+N^lle Orleans a lequel volontairement reconnu et confesse devoir a
+Monsieur de Salmon Cy devant Commissaire Ordonnateur a la
+Louisiane la Somme de huit mille Livres pour une famille des
+Negres et Negresses dont le pere s'apelle (sic) dominique, Marianne
+sa femme, hypolite leur fille aimée, Louis agé de douze ans
+ou Environ, joseph agé de cinq ans, anne agée de quatre ans Et demy
+francois a la mamelle Et Claude fils d'hypolite a la mamelle
+en faisant le nombre de huit tetes que Mond. Sieur de Salmon, luy
+a presentement vendu et livré Exepte 'le nommé dominique
+Cusinier Chef de le d't famille que mond' Sieur vendeur Salmon
+reserve d'emmener En france pour le servir dans le d’le du Roy
+qui doit incessamment sortir Et qu'il promet Et s'oblige de renvoyer
+a se de fais du Espagne par les premiers vaisseaus qui viendront
+a la Louisiane d’ynon et au cas que le dit negre vint a mourir
+ou a Etre pris par les Ennemies de la france ou quil ne fut point
+En parfaite Sante avant dEtre remis a Monchsr. Raguet Monchsr.
+de Salmon promet diminuer Sur la somme principalle de huit
+mille Livres celle de deux mille cinq cent Livres a quoy a Eté
+Estimé Et Evalué Entre luy et le ch Sr. acquereur le d.^t negre
+apellé dominique la quelle d.t somme de huit mille Livres.
+
+
+Monchsr. Raguet S’oblige et Promet de la donner a payer au
+Monch.Sieur de Salmon ou au porteur de'a poreseule a En Espèces
+donnatuer ou lettres de change sur 9'ee les trésoriers généraux
+De la marine, les quelles lettres de change seront adressees
+Au S. Hersan Commissionnaire de Mons. De Salmon demeurant
+A la _oix defert Rue S^t Denis à Paris le dit payements a
+Fixe en quatre années prochaines en consécutifs et payements
+Egaux données en année a commencer de ce jour C'est a dire
+Deux mille Livres par Chaque année, aux conditions que
+Mond. S. Raguet ne pourra vendre ny Engager aucuns des d.^ts
+Negres negresses ou negrillons d'y devant vendu a qu'il ne l'a 
+arot entièrement payé poursuivant de quel paiement que la obligée
+d'une hypothèque tous ses Biens meubles Et immeubles Ete
+Speciallement la d^t famille de negres et pour l'exécution des
+Presentes Mond. 
+
+
+S. Raguet a elu(?) son domicile a la N^lle Orleans
+En sa maison et demeure ordinaire au quel lieu il consent
+Que tous ___ soient faites En vertu des presents car ainsy
+A Ete convenu et arrêtée Entre les parties, promettant et
+renouvelant(?) a toutes choses a ce contrain fait et passée a
+La Nouvelle orléans province de la louisiane le seize
+Décembre et etudes l'an mil sept quarante quatre
+Prefence des(?) S^t Augustin Chantalou et Jacques Contrelle
+Temoins y demeurants Et ont signé ainsy signé Et(?) minute
+Salmon, Raguet, Chatelou, Cantrelle Etnous No.^(?) soussigné.
 
 
 
 
 
 
+## English Translation
+Sent before the Royal Notary of the Louisiana Province Residing in New Orleans.
+The undersigned witnesses present in person:
+Mr. Jean-Baptiste Raguet, Advisor on the Superior Council residing in
+New Orleans, to which he voluntarily recognizes and admits to owe to
+Mr. Salmon here before the Chief Civil Officer in
+Louisiana a sum of eight thousand livres for a family of
+negros and negresses whose patriarch is called Dominique, Marianne
+his wife, Hypolite their beloved daughter, Louis twelve years old
+or thereabout, Joseph five years old, Anne four years old, little
+François at the breast and Claude the son of Hypolite at the breast making a headcount of eight total. Mr. de Salmon has
+to date sold and delivered, except for the named Dominique,
+head chef, all of the said family. The seller has reserved the right to bring him to France to serve at the residence of the King, that he is leaving soon and promises and is obligated to send him [Dominique] from Spain without cost on one of the first ships to come to Louisiana if not and if the said negro is to die
+or to be taken by the enemies of France or that he is not
+in perfect health before being returned to Mr. Raguet Mr.
+Salmon promises to reduce the principal sum of eight
+thousand livres the sum of two thousand five hundred livres which had been
+estimated and evaluated between him and the esteemed sir to acquire the said Black man
+called Dominique the said sum of eight thousand livres.
 
+
+Mr. Raguet is obliged and promises to pay said total to Mr. de Salmon or the bearer of this [order] only in cash or by promissory note contracted with the General Treasurers of the Navy, in which case the promissory note will be addressed to Mr. Hersan Commissioner of the [Paris] Mint. Mr. de Salmon living at St. Denis Street in Paris, the said fixed payments are to be made in the next four years as equal and consecutive payments given annually starting this day, which is to say two thousand livres each year, under the conditions that have been said. Mr. Raguet will not be able either to sell or to indenture any of the said negros, negresses, and negro children before he has paid in full or be sued for what payment is obligated by mortgage upon all of his movable property, especially the said family of negros, for the execution of the present contract and any consequences arising thereof.
+
+
+Mr. Raguet elected his domicile in New Orleans, in his house and ordinary home in which place he consents that all ___ in the virtue of those present because this way
+
+
+In New Orleans, province of Louisiana, the sistine of December and ___ the yeah seventeen hundred forty-four in the presence of __ Augustin Chantalou and Jacques Contrelle witnesses (and?) residing (?) and who signed
